--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "neptab-clone",
+  "name": "snigdhaos-devtab",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://<your-username>.github.io/neptab-clone/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "date-fns": "^3.3.1",
@@ -31,6 +33,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "gh-pages": "^3.2.3"
   }
 }
